force-app/main/default/objects/CP_RelatedProduct__c/CP_RelatedProduct__c.object-meta.xml
<CustomObject>
    <description>Productos relacionados</description>
    <label>Producto Relacionado</label>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Nombre de Producto Relacionado</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos Relacionados</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>