force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_AccountType__c.field-meta.xml
<CustomField>
    <fullName>CP_AccountType__c</fullName>
    <description>Cuenta</description>
    <label>Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>