force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_AdditionaInterest__c.field-meta.xml
<CustomField>
    <fullName>CP_AdditionaInterest__c</fullName>
    <description>Interés adicional</description>
    <label>Interés adicional</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>