force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_CandidateIDU__c.field-meta.xml
<CustomField>
    <fullName>CP_CandidateIDU__c</fullName>
    <description>IDU Candidato</description>
    <label>IDU Candidato</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>