force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_DebtAmount__c.field-meta.xml
<CustomField>
    <fullName>CP_DebtAmount__c</fullName>
    <description>Monto que debia</description>
    <label>Monto que debía</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>