force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_Delay__c.field-meta.xml
<CustomField>
    <fullName>CP_Delay__c</fullName>
    <description>Cantidad correspondiente al atraso que cliente presenta en cada uno de los articulos</description>
    <label>Atraso</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>