force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_ExpiredPayments__c.field-meta.xml
<CustomField>
    <fullName>CP_ExpiredPayments__c</fullName>
    <description>Cantidad de abonos vencidos que el cliente presenta en cada artículo.</description>
    <label>Cantidad de abonos vencidos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>