force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice__c</fullName>
    <description>Número de factura</description>
    <label>Factura</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>