force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_LastPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>CP_LastPaymentAmount__c</fullName>
    <description>Monto de último abono</description>
    <label>Monto último abono</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>