force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_LastPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>CP_LastPaymentDate__c</fullName>
    <description>Fecha de último abono</description>
    <label>Fecha de último abono</label>
    <type>Date</type>
</CustomField>