force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_MonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>CP_MonthlyPayment__c</fullName>
    <description>Abono mensual</description>
    <label>Abono mensual</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>