force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_NumberOfProducts__c.field-meta.xml
<CustomField>
    <fullName>CP_NumberOfProducts__c</fullName>
    <description>Número de artículos</description>
    <label>Número de artículos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>