force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_PayWith__c.field-meta.xml
<CustomField>
    <fullName>CP_PayWith__c</fullName>
    <description>Monto con el que el cliente puede liquidar cada uno de los artículos.</description>
    <label>Pague con</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>