force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_Product__c.field-meta.xml
<CustomField>
    <fullName>CP_Product__c</fullName>
    <description>Articulo</description>
    <label>Artículo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>