force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_PurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>CP_PurchaseAmount__c</fullName>
    <description>Monto de compra</description>
    <label>Monto de compra</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>