force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>CP_PurchaseDate__c</fullName>
    <description>Fecha de compra</description>
    <label>Fecha de compra</label>
    <type>Date</type>
</CustomField>