force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_SalesforceCustomerID__c.field-meta.xml
<CustomField>
    <fullName>CP_SalesforceCustomerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Productos Relacionados</relationshipLabel>
    <relationshipName>Articulos_Relacionados</relationshipName>
    <type>Lookup</type>
</CustomField>