force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_Store__c.field-meta.xml
<CustomField>
    <fullName>CP_Store__c</fullName>
    <description>Número de tienda</description>
    <label>Tienda</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>