force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_TotalDebt__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalDebt__c</fullName>
    <description>Monto de deuda total</description>
    <label>Monto deuda total</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>