force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_TotalToBePayed__c.field-meta.xml
<CustomField>
    <fullName>CP_TotalToBePayed__c</fullName>
    <description>Cantidad correspondiente que el cliente tiene que pasar a pagar, que equivale a la suma del atraso, el abono mensual y los intereses generados.</description>
    <label>Cantidad total a pagar</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>