force-app/main/default/objects/CP_RelatedProduct__c/fields/CP_WalletCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CP_WalletCustomerNumber__c</fullName>
    <description>Número de cliente crédito</description>
    <externalId>true</externalId>
    <label># Cliente Crédito</label>
    <length>80</length>
    <type>Text</type>
</CustomField>