force-app/main/default/objects/CP_RelatedProduct__c/fields/KeyX__c.field-meta.xml
<CustomField>
    <fullName>KeyX__c</fullName>
    <externalId>true</externalId>
    <label>KeyX</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>