force-app/main/default/objects/CP_RelatedProduct__c/fields/KeyX_del__c.field-meta.xml
<CustomField>
    <fullName>KeyX_del__c</fullName>
    <label>KeyX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>